# webmix

./: .gitignore  GLOSSARY.md  README.md  TODO.md  pyproject.toml  treatcfsfm.md  webmix.sh
.github/: collaboration.instructions.md  features.instructions.md  risk-aware-conventional-commits.instructions.md  todo-list.instructions.md
.github/agents/: bdd-developer.agent.md  bdd-spec-writer.agent.md
scripts/: convert_sitemap.py
tests/data/hierarchical_site/: index.html
tests/data/hierarchical_site/section-a/: index.html  page1.html
tests/data/hierarchical_site/section-b/: index.html
tests/data/sample_site/treatcfsfm.org/: contact.php.html  content-List-of-All-Worksheets.html  detail-100-How-I-Improved-My-Life-by-Accepting-My-Limits.html  detail-101-Living-with-Fibromyalgia-What-Helps-Me.html  detail-102-Using-Self-Management-to-Treat-CFS.html  detail-103-Getting-the-Most-from-Limited-Energy.html  detail-104-Learning-to-Manage-Fibromyalgia.html  detail-105-Physical-and-Psychological-Recovery-from-CFS.html  detail-106-The-Power-of-P.R.I.D.E..html  detail-107-The-Healing-Power-of-Gratitude.html  detail-108-Recovery-from-CFIDS-What-Worked-for-Me,-Part-1.html  detail-109-Recovery-from-CFIDS-What-Worked-for-Me,-Part-2.html  (+157 more)
tests/features/: aggregation.feature  batch.feature  discovery.feature  extraction.feature  linking.feature  sitemap.feature  structure.feature  table_of_content.feature
tests/step_defs/: conftest.py  test_aggregation.py  test_batch.py  test_discovery.py  test_extraction.py  test_linking.py  test_sitemap.py  test_structure.py  test_table_of_content.py
webmix/: discovery.py  extraction.py  fetcher.py  main.py  structure.py
(+9 files in other folders)
