[project]
name = "webmix"
version = "0.1.0"
description = "A tool to convert websites to LLM-friendly markdown"
authors = [
    {name = "Philou"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-bdd (>=8.1.0,<9.0.0)",
    "trafilatura (>=2.0.0,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "typer (>=0.20.0,<0.21.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)"
]

[project.scripts]
webmix = "webmix.main:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "network: marks tests as requiring network access (deselect with '-m \"not network\"')",
]
addopts = "-m 'not slow and not network'"
