[project]
name = "webmix"
version = "0.1.0"
description = "A tool to convert websites to LLM-friendly markdown"
authors = [
    {name = "Philou"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytest>=8.0.0",
    "pytest-bdd>=7.0.0",
    "trafilatura>=1.9.0",
    "requests>=2.31.0",
    "typer>=0.9.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0"
]

[project.scripts]
webmix = "webmix.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "network: marks tests as requiring network access (deselect with '-m \"not network\"')",
]
addopts = "-m 'not slow and not network'"
